# corrosion

./: Cargo.toml  Cross.toml
.antithesis/config/: docker-compose.yaml
.antithesis/corrosion/: Dockerfile
crates/corro-admin/src/: lib.rs
crates/corro-agent/: Cargo.toml
crates/corro-agent/src/agent/: handlers.rs  util.rs
crates/corro-pg/src/: lib.rs
crates/corro-types/src/: config.rs  sqlite.rs
crates/corrosion/: Cargo.toml  build.rs
crates/corrosion/src/: admin.rs  main.rs
crates/corrosion/src/command/: agent.rs
crates/corrosion/src/command/consul/: sync.rs
crates/sqlite3-restore/: Cargo.toml
crates/sqlite3-restore/src/: lib.rs
crates/tripwire/src/: signalstream.rs  tripwire.rs
integration-tests/tests/: cli_test.rs
